fixed index.php to completion for index.php (maybe the reactions can still overlap..?)

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,8 +79,8 @@ background: #555;
     -webkit-text-stroke: 4px #e97934;
     text-align: center;
     left: 50%;
-    margin-top: 0vh;
-    margin-bottom: 50px;
+    margin-top: 1vh;
+    margin-bottom: 3vh;
 }
 
 .top3-wrapper{
@@ -88,6 +88,7 @@ background: #555;
     flex-direction: row;
     /* margin-left: 20vw; */
     justify-content: center;
+    align-items: flex-end;
 }
 
 .top3_indiv {
@@ -129,11 +130,8 @@ background: #555;
 }
 
 /* styling for first place top  */
-.top-one {
-   width: 25em;
-}
-
 .top-one img {
+    width: 20em;
     height: 40vh;
 }
 
@@ -189,6 +187,7 @@ h2 {
     font-family: raleway, sans-serif;
     font-weight: 700;
     margin-top: 30px;
+    margin-bottom: 10px;
     color: white;
 }
 
@@ -209,10 +208,18 @@ h2 {
     display: flex;
     flex-direction: row;
     position: relative;
-    top: -50px;
+    top: -26px;
+    left: 9px;
+    font-family: raleway, sans-serif;
+    font-weight: 500;
 }
 
-
+.recent-reactions {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    justify-content: space-between;
+}
 
 
 
